# mcp-compliance-grc

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/: framework-manifest.json  self-assessment.json
docs/adr/: README.md
scripts/: nightly_agent.py
src/mcpgrc/: __init__.py  server.py
src/mcpgrc/core/: audit_trail.py  config.py  evidence.py  narrator.py
src/mcpgrc/frameworks/: iso27001.py  pcidss.py  registry.py  soc2.py
src/mcpgrc/tools/: controls.py  narrative.py
tests/: test_config.py  test_evidence.py  test_frameworks.py  test_tools.py
