[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-compliance-grc"
version = "0.1.0"
description = "MCP server for GRC workflows — maps controls to code evidence and drafts compliance narratives"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["mcp", "grc", "compliance", "soc2", "iso27001", "fintech", "ai-agents"]
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anthropic>=0.28.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "jinja2>=3.1.4",
]

[project.scripts]
mcp-compliance-grc = "mcpgrc.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcpgrc"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"